--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "react-spring": "^9.7.3",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animated": "^1.0.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "use-resize-observer": "^9.1.0"
   }
 }
